# dtest

./: .gitignore  Cargo.toml  dtest.sqlite
migrations/2019-09-14-160245_create_events/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
