[package]
name = "dtest"
version = "0.1.0"
authors = ["Peter Abrahamsen <rainhead@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
diesel = { version = "1.4", features = ["sqlite", "chrono", "uuidv07"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.7", features = ["serde", "v1", "v4", "v5"] }
